fixed minimal screen overflow

--- a/src/components/Phone/Screen/screen.scss
+++ b/src/components/Phone/Screen/screen.scss
@@ -3,7 +3,8 @@
     border-radius: 7px;
     font-family: "VT323";
     vertical-align: bottom;
-    font-size: 1.25em;
+    font-size: 1.5em;
     padding: 4%;
-    overflow-y: hidden;
+    overflow: hidden;
+    word-wrap: break-word
 }
